# serving

./: .gitignore  WORKSPACE
study/: BUILD.md
study/start_tf_serving/: CMakeLists.txt  client.cc
tensorflow_serving/: repo.bzl
tensorflow_serving/model_servers/: BUILD
